# utils

./: .gitignore  pyproject.toml
data/: buildings.json  coins.json  gems.json  prune_artifacts.py  sculptures.json  sites.json
src/utils/: compile_images.xq  convert_entities.py  dedupe-csv.py  extract_long_fields.py  generate_csv.py  json_to_csv.py  map_images.py  winnow-images.py
src/utils/objects/: models.py  notebook1.ipynb  vase.py
tests/data/: vases.json
