[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cliff Wulfman", email = "cwulfman@princeton.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3.0",
    "pydantic>=2.10.4",
    "rdflib>=7.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-datadir>=1.5.0",
    "ruff>=0.8.6",
]
